--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -18,6 +22,8 @@ body {
   --secondary: hsl(120, 8%, 70%);
   --third: white;
   --fourth: hsl(120, 81%, 17%);
+  --fifth: hsla(0, 20%, 97%, 0.583);
+  --sixth: hsl(33, 69%, 13%);
 }
 
 h1 {
